--- a/TaskMaster/templates/main.html
+++ b/TaskMaster/templates/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,15 +6,18 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>TaskMaster</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script> -->
+    <!-- <link rel='stylesheet' type='text/css' media='screen' href="{% static '/style/main.css' %}"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <script src='main.js'></script> -->
 </head>
 
 <body>
-{% include 'navbar.html' %}
-{% block content %}
+        {% include 'navbar.html' %}
 
-{% endblock content %}
+            {% block content %}
+            {% endblock content %}
+
 </body>
 
 </html>
