--- a/TaskMaster/templates/main.html
+++ b/TaskMaster/templates/main.html
@@ -10,13 +10,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- <script src='main.js'></script> -->
+    <style>
+    </style>
 </head>
 
-<body>
-        {% include 'navbar.html' %}
+<body class="bg-secondary">
 
-            {% block content %}
-            {% endblock content %}
+    {% include 'navbar.html' %}
+    
+    {% block content %}
+    {% endblock content %}
+
+
+
+        
 
 </body>
 
