--- a/TaskMaster/BaseApp/templates/BaseApp/items.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/items.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
-{% block content %}
+<!-- {% block content %}
 
 <form method="POST" action="">
     {% csrf_token %}
@@ -13,4 +13,4 @@
 {% endfor %}
 
 
-{% endblock content %}
+{% endblock content %} -->
