--- a/TaskMaster/BaseApp/templates/BaseApp/delete-item.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/delete-item.html
@@ -1,6 +1,6 @@
 {% extends 'main.html' %}
-{% block content %}
-
+<!--{% block content %}
+ 
 <form method="POST" action="">
     {% csrf_token %}
     <p>Are you sure you want to delete {{item.title}}?</p>
@@ -8,4 +8,4 @@
     <input type="submit" value="Submit">
 </form>
 
-{% endblock content %}
+{% endblock content %} -->
