--- a/TaskMaster/BaseApp/templates/BaseApp/delete-list.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/delete-list.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %}
-{% block content %}
+<!-- {% block content %}
 
 <form method="POST" action="">
     {% csrf_token %}
@@ -8,4 +8,4 @@
     <input type="submit" value="Submit">
 </form>
 
-{% endblock content %}
+{% endblock content %} -->
