--- a/TaskMaster/templates/main.html
+++ b/TaskMaster/templates/main.html
@@ -1,29 +1,25 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>TaskMaster</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href="{% static '/style/main.css' %}"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <script src='main.js'></script> -->
-    <style>
-    </style>
+    <title>TaskMaster</title>
+    <link rel="stylesheet" href="{% static 'style/main.css' %}">
+    {% block style %}
+    {% endblock %}
 </head>
 
-<body class="bg-secondary">
-
-    {% include 'navbar.html' %}
+<body>
+    <div id="container">
+        {% include 'navbar.html' %}
+        {% block content %}
+        {% endblock content %}
+    </div>
     
-    {% block content %}
-    {% endblock content %}
 
-
-
-        
 
 </body>
 
