list view, new checkbox style

--- a/TaskMaster/BaseApp/templates/BaseApp/home.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/home.html
@@ -15,9 +15,10 @@
             <div class="upcoming-element-text">
                 <div style="float: left;">0{{forloop.counter}}.&nbsp</div><div>{{item.title}}</div>  
             </div>
-            <div class="checkbox-container">
-                <input type="checkbox" name="upcoming" class="upcoming-checkbox">
-            </div>
+            <label class="container">
+                <input type="checkbox">
+                <span class="checkmark"></span>
+            </label>
         
          
     </li>
@@ -35,9 +36,10 @@
                     <div style="float: left;">0{{forloop.counter}}.&nbsp</div>
                     <div>{{item.title}}</div>
                 </div>
-                <div class="checkbox-container">
-                    <input type="checkbox" name="upcoming" class="upcoming-checkbox">
-                </div>
+                <label class="container">
+                    <input type="checkbox">
+                    <span class="checkmark"></span>
+                </label>
         
         
             </li>
