--- a/TaskMaster/BaseApp/templates/BaseApp/list-view.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/list-view.html
@@ -32,10 +32,15 @@
         
         </li>
         
-{% endblock content %} 
-    </ul>
 
+    </ul>
+    <!-- <div id="popup-add-item-container">
+        <div id="add-item-window">
+            
+        </div>
+    </div> -->
 
 
 
 </div>
+{% endblock content %} 
