--- a/TaskMaster/static/style/navbar.css
+++ b/TaskMaster/static/style/navbar.css
@@ -5,6 +5,7 @@
     background-color: #F5F5F5;
     border-radius: 1vh;
     border: 0.2vh solid #EBEBEB;
+    max-height: 100%;
 }
 
 #navbar-container {
@@ -15,6 +16,7 @@
     border-radius: 1vh;
     align-items: center;
     border: 0.2vh solid #EBEBEB;
+    
 }
 
 #logo-image {
@@ -23,7 +25,10 @@
 
 }
 
-
+#list-container{
+    overflow-y: scroll;
+    
+}
 #nav-logo {
     margin-top: 2vh;
     display: flex;
@@ -31,14 +36,23 @@
     justify-content: center;
 }
 
-#nav-links {
+#nav-links-container {
     margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    max-height: 87%;
 }
-
-.nav-list {
+#nav-links{
+    
+    list-style: none;
+    font-size: 2vh;
+    height: fit-content;
+}
+#nav-list {
     list-style: none;
     font-size: 2vh;
 }
+
 
 .nav-element {
     margin: 2vh 0 0 0;
@@ -100,4 +114,37 @@
     border-width: 0;
     background-color: #EBEBEB;
     width: 100%;
+}
+/*--------------------- create list popup form ------------------*/
+#popup-add-list-container {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.2);
+    /* Black w/ opacity */
+}
+
+#add-list-window {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    height: 50%;
+    background-color: #F5F5F5;
+    border-radius: 1vh;
+    border: 0.5vh solid #EBEBEB;
+    box-sizing: border-box;
+}
+#close:hover{
+    color: gray;
+    cursor: pointer;
 }
