--- a/TaskMaster/templates/main.html
+++ b/TaskMaster/templates/main.html
@@ -22,5 +22,9 @@
 
 
 </body>
-
+<script>
+    var imgSrc = "{% static 'images/checklist.png' %}"
+</script>
+{% block script %}
+{% endblock %}
 </html>
