creating and displaying list, items using fetch

--- a/TaskMaster/BaseApp/templates/BaseApp/home.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/home.html
@@ -27,7 +27,7 @@
 </ul>
 
 </div>
-<div id="list-container">
+<div id="random-list-container">
         <ul id="random-task-list" title="{{random_list.title}}">
             {% for item in random %}
             <li class="random-element">
