--- a/TaskMaster/BaseApp/templates/BaseApp/list-view.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/list-view.html
@@ -5,42 +5,46 @@
 {% endblock style %}
 {% block content %}
 <div id="list-view-container">
-     <h1 id="list-title">{{list.title}}</h1><h3 id="date">{{list.created_at}}</h3>
-    <h4 id="list-description">{{list.description}}  </h4>
-    <hr id="list-hr">              
+     <h1 id="list-title"></h1><h3 id="date"></h3>
+    <h4 id="list-description"></h4>
+    <hr id="list-hr">
+    <div id="all-list-container">         
     <ul id="list-view">
-        {% for task in items %}
-        <li class="list-element">
-            <div class="list-element-text">
-            <label class="container"><h3 >{{task.title}}</h3>
-                <input type="checkbox">
-                <span class="checkmark"></span>
-            </label>
-
-            </div>
-        </li>
-        {% endfor %}
-        <li class="list-element" >
-            <div class="list-element-text">
-                <a id="add-task-link" href="{% url 'add-item' list.id %}">
-                <label class="container">
-                    <h3 class="task-name"> add item</h3>
-                    <img id="add-item" src="{% static 'images/add.png' %}" alt="Plus icon">
-                </label>
-            </a>
-        </div>
-        
-        </li>
-        
-
     </ul>
-    <!-- <div id="popup-add-item-container">
+        <div class="list-element" id="add-item">
+            <img src="{% static 'images/add.png' %}" alt="add item icon"  id="add-icon">
+            <h3 class="list-element-text"> Add task...</h3>
+        </div>
+        </div> 
+
+    
+    <div id="popup-add-item-container">
         <div id="add-item-window">
+            <h2>Create List</h2>
+            <div id="close">close</div>
+            <form id="form-item">
+                <label for="item-title">Title</label>
+                <input type="text" name="item-title" id="item-title">
+                <label for="item-description">Description</label>
+                <textarea name="item-description" id="item-description" cols="30" rows="10"></textarea>
+                <label for="Due-date">Due date</label>
+                <input type="datetime-local" name="Due-date" id="Due-date">
+                <input type="submit" value="submit">
+                <input type="reset" value="reset">
+            </form>
+        </div>
+    </div>
+    <div id="popup-view-item-container">
+        <div id="view-item-window">
+            <div id="close-view-item">close</div>
+            <h2 id="list-view-title"></h2>
             
         </div>
-    </div> -->
-
+    </div>
 
 
 </div>
 {% endblock content %} 
+{% block script %}
+<script src="{% static 'js/list-view.js' %}"></script>
+{% endblock %}
