added task detail and delete task

--- a/TaskMaster/BaseApp/templates/BaseApp/list-view.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/list-view.html
@@ -21,7 +21,7 @@
     <div id="popup-add-item-container">
         <div id="add-item-window">
             <h2>Create List</h2>
-            <div id="close">close</div>
+            <div id="close-item-form">close</div>
             <form id="form-item">
                 <label for="item-title">Title</label>
                 <input type="text" name="item-title" id="item-title">
@@ -37,8 +37,19 @@
     <div id="popup-view-item-container">
         <div id="view-item-window">
             <div id="close-view-item">close</div>
-            <h2 id="list-view-title"></h2>
-            
+            <br>
+            <div id="delete-item">delete</div>
+            <h3>List</h3>
+            <h2 id="item-view-list-title"></h2>
+            <hr class="item-view-hr">
+            <h3>Task</h3>
+            <h2 id="item-view-title"></h2>
+            <hr>
+            <h4>Description</h4>
+            <span id="item-view-description">description descript iondescriptiondescriptiondes criptiond escripti ondescriptiond escrip tionde scriptio ndescripti on</span>
+            <hr>
+            <h4>Due date</h4>
+            <p>21.03.2022 14:18</p>
         </div>
     </div>
 
