--- a/TaskMaster/BaseApp/templates/BaseApp/login.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/login.html
@@ -8,6 +8,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>TaskMaster</title>
     <link rel="stylesheet" href="{% static 'style/main.css' %}">
+    
+
 </head>
 
 <body>
@@ -19,7 +21,7 @@
             <input type="text" name="Username" id="Username">
             <label for="Password">Password</label>
             <input type="password" name="Password" id="Password">
-            <input type="submit" value="login">
+            <input type="submit" value="login" id>
         </form>
         </div>
     </div>
