--- a/TaskMaster/templates/main.html
+++ b/TaskMaster/templates/main.html
@@ -8,8 +8,10 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>TaskMaster</title>
     <link rel="stylesheet" href="{% static 'style/main.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     {% block style %}
     {% endblock %}
+
 </head>
 
 <body>
