--- a/TaskMaster/templates/navbar.html
+++ b/TaskMaster/templates/navbar.html
@@ -56,7 +56,7 @@
 </div>
 
 <div id="search-container">
-
+<a href="{% url 'login' %}">login</a>
 </div>
 <div id="popup-add-list-container">
     <div id="add-list-window">
