--- a/TaskMaster/BaseApp/templates/BaseApp/login.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/login.html
@@ -21,7 +21,7 @@
             <input type="text" name="Username" id="Username">
             <label for="Password">Password</label>
             <input type="password" name="Password" id="Password">
-            <input type="submit" value="login" id>
+            <input type="submit" value="login" >
         </form>
         </div>
     </div>
