--- a/TaskMaster/BaseApp/templates/BaseApp/list-view.html
+++ b/TaskMaster/BaseApp/templates/BaseApp/list-view.html
@@ -24,11 +24,11 @@
             <div id="close-item-form">close</div>
             <form id="form-item">
                 <label for="item-title">Title</label>
-                <input type="text" name="item-title" id="item-title">
+                <input type="text" name="title" id="item-title">
                 <label for="item-description">Description</label>
-                <textarea name="item-description" id="item-description" cols="30" rows="10"></textarea>
+                <textarea name="description" id="item-description" cols="30" rows="10"></textarea>
                 <label for="Due-date">Due date</label>
-                <input type="datetime-local" name="Due-date" id="Due-date">
+                <input type="datetime-local" name="dueDate" id="Due-date">
                 <input type="submit" value="submit">
                 <input type="reset" value="reset">
             </form>
